--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         </div>
     </div> 
     <a href="https://github.com/vendettathevhsdvr">github</a></hi>
-    <a href="radiomarusyafm.html">Русское радио "Маруся FM"</a></hi>
     <a href="https://discord.gg/vRpyQPeS7M">Наш Сервер В Discord</a></hi>
 	    <a href="https://vendettathevhsdvr.github.io/SMG4RadioWebOfficialENG/index.html">АНГЛ.ЯЗ сайт</a></hi>
 		    <a href="https://vendettathevhsdvr.github.io/SMG4RadioWebOfficial/">Русский Язык Сайт</a></hi>
-    <img src="SMG1SMG2.png">
+    <img src="SMG1SMG2.png"
+	    width="500" 
+            height="500">
 </body>
 </html>
